--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -20,7 +19,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OperadoresFuneraria"
         tools:targetApi="31">
-        <service android:name=".utils.LocationService" android:foregroundServiceType="location"/>
+
+        <service android:name=".utils.location.LocationService" android:foregroundServiceType="location"/>
         <activity
             android:name=".ui.launch.LaunchActivity"
             android:exported="true" >
