--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,12 @@
         android:theme="@style/Theme.OperadoresFuneraria"
         tools:targetApi="31">
 
-        <service android:name=".utils.location.LocationService" android:foregroundServiceType="location"/>
+        <service android:name=".common.location.LocationService" android:foregroundServiceType="location"/>
         <activity
             android:name=".ui.launch.LaunchActivity"
             android:exported="true"
-            android:theme="@style/AppFullScreenTheme">
+            android:theme="@style/AppFullScreenTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,11 +36,14 @@
             android:name=".ui.main.MainActivity"
             android:exported="false"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.OperadoresFuneraria.NoActionBar" />
+            android:theme="@style/Theme.OperadoresFuneraria.NoActionBar"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
-            android:label="@string/title_activity_login">
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.OperadoresFuneraria.NoActionBar"
+            android:screenOrientation="portrait">
 
         </activity>
 
